# PocketMoE

./: .gitignore  GGUF_Q2_SINGLE_GPU.md  README.md  README_CN.md  requirements.txt  setup.py
configs/: config_fp4_active.json  config_w8a8.json  config_w8a8_full.json  config_w8a8_full_ascend_safe.json  config_w8a8_full_hybrid.json  config_w8a8_hc10.json  config_w8a8_hc5.json  config_w8a8_modelslim_aligned.json
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/cuda/: bf16_ops.cu  cuda_ops.cu  flashmemory_ops.cu  fp4_ops.cu  fp8_ops.cu  iq1_grid.inc  iq1_ops.cu  q2_ops.cu  quant_gemm.cu  rmsnorm_rope.cu
cpp_engine/include/: cuda_ops.hpp  dsv4_engine.hpp  flashmemory_ops.hpp  gguf_reader.hpp  json_lite.hpp  model_config.hpp  safetensors_model.hpp  safetensors_reader.hpp  tensor.hpp  tokenizer.hpp  tp_comm.hpp  weight_source.hpp
cpp_engine/src/: dsv4_engine.cpp  gguf_reader.cpp  json_lite.cpp  main.cpp  model_config.cpp  safetensors_model.cpp  safetensors_reader.cpp  sampler.cpp  tensor.cpp  tokenizer.cpp  tp_comm.cpp  weight_source.cpp
cpp_engine/tests/: export_flashmemory_fixture.py  probe_host_register.cpp  test_attention_projection.cpp  test_embedding_head.cpp  test_flashmemory_scorer.cpp  test_fp4_matvec.cpp  test_fp8_matvec.cpp  test_gguf_attn_norm_wqa.cpp  test_gguf_dense_smoke.cpp  test_gguf_full_forward.cpp  test_gguf_generate.cpp  test_gguf_iq1m_reader.cpp  test_gguf_min_layer_smoke.cpp  test_gguf_reader.cpp  test_gguf_routed_expert.cpp  test_gguf_routed_moe.cpp  test_gguf_shared_expert.cpp  test_min_layer_smoke.cpp  test_moe_grouped_fp4.cpp  test_moe_grouped_iq1.cpp  test_moe_grouped_q2.cpp  test_moe_single_expert.cpp  test_nccl_smoke.cpp  test_q2_matvec.cpp  test_quant_gemm.cpp  test_rmsnorm.cpp  test_safetensors_model.cpp  test_safetensors_reader.cpp  test_tokenizer.cpp  test_weight_source.cpp
cpp_engine/tools/: inspect_gguf.cpp  inspect_safetensors.cpp
docs/: FLASHMEMORY_1M_CONTEXT.md  PHASE2_VALIDATION_RESULTS.md
inference/: convert.py  cpu_routed_backend.py  cuda_kernel.cpp  cuda_kernel_impl.cu  deepseek_cpu_moe_ext.cpp  generate.py  kernel.py  model.py  moe_dispatch_cuda_backend.py  moe_dispatch_cuda_ext.cpp  run_best_scheduler.sh  setup_deepseek_cpu_moe_ext.py  setup_moe_dispatch_cuda_ext.py  setup_wo_a_cuda_ext.py  test_fused_attn_prefuse.py  test_int8_gemm_imma.py  wo_a_cuda_backend.py  wo_a_cuda_ext.cpp  wo_a_cuda_kernel.cu
scripts/: analyze_gate_overlap.py  flashmemory_kv_swap_demo.sh  run_arena_rss_ab.sh  run_best_external_cpu_moe.sh  run_best_scheduler.sh  run_cpu_moe_profile.sh  run_decode_profile.sh  run_fp4_active_ab.sh  run_fp4_resident_best.sh  run_gguf_q2_tp_generate.sh  run_gguf_q2_tp_resident.sh  run_inline_ab.sh  run_omp_sweep.sh  run_openai_server.sh  run_pd_serial.sh  validate_best_serial.sh
src/cli/: convert_checkpoint.py  generate.py  generate_gguf.py  generate_minimax.py  generate_minimax_gguf.py  inspect_gguf.py  make_routed_source_gguf.py  merge_imatrix.py
src/components/gguf/: __init__.py  quantized_ops.py  tp_logits.py
src/components/moe/: __init__.py  capability.py  cpu_backend.py  gpu_prefill_backend.py  placement.py  registry.py  shared_weights.py  spec.py
src/csrc/: cuda_kernel.cpp  cuda_kernel_impl.cu  deepseek_cpu_moe_ext.cpp  dot_microbench.cpp  moe_dispatch_cuda_kernel.cu
src/encoding/: dsv4.py
src/gguf/: imatrix.py  tensor_reader.py
src/kernels/: cuda_loader.py  moe_dispatch_loader.py  ops.py
src/loader/: __init__.py  safetensors.py
src/loader/gguf/: __init__.py  bundle.py  imatrix.py  iq1_grid.py  quant_types.py  quantized_loader.py  quantized_tensor.py  reader.py  tensor_reader.py
src/loader/mappings/: deepseek_v4.py  minimax_m2.py
src/models/deepseek_v4/: generation.py  loader.py  moe_server.py  partition.py  runtime.py  spec.py
src/models/minimax_m2/: __init__.py  architecture.py  generation.py  gguf_generation.py  gguf_model.py  loader.py  moe_planning.py  moe_runtime.py  runtime.py  spec.py
src/models/moe/: __init__.py  placement.py  registry.py  spec.py
src/moe/: cpu_backend.py  cpu_server.py  gpu_prefill_backend.py
src/moe_model/: minimax_m2_moe.py
src/runtime/: generation.py  gguf_loader.py  minimax_m2_moe.py  pd_scheduler.py  prefix_snapshot.py  transformer.py
src/runtime/deepseek_v4/: __init__.py  loader.py
src/runtime/moe/: __init__.py  cpu_backend.py  cpu_server.py  ipc.py  minimax_m2.py
src/server/: engine.py  openai.py
tests/: bench_cpu_fp4_raw_moe.py  bench_gguf_fused_expert.py  bench_gguf_iq1m_cuda_matmul.py  bench_gguf_q2_cuda_matmul.py  bench_gguf_raw_components.py  bench_gguf_raw_matmul.py  bench_moe_prefill_fp4_as_int8.py  bench_moe_prefill_fp4_grouped.py  bench_moe_single_token_fp4.py  gguf_test_utils.py  profile_moe_single_token_fp4.py  test_cpu_fp4_raw_moe.py  test_deepseek_v4_model_namespace.py  test_encoding_dsv4.py  test_fused_attn_prefuse.py  test_gguf_bundle.py  test_gguf_imatrix.py  test_gguf_iq1m_reader.py  test_gguf_q4_q5_cuda.py  test_gguf_quantized_ops_cuda.py  test_inspect_gguf_specs.py  test_int8_gemm_imma.py  test_minimax_decode_reduce.py  test_minimax_iq2xxs_w2_dp4a.py  test_minimax_m2_gguf_runtime.py  test_minimax_m2_moe_runtime.py  test_minimax_m2_spec.py  test_moe_model_registry.py  test_moe_single_token.py  test_moe_single_token_fp4.py  test_openai_server.py  test_openai_utils.py  test_package_boundaries.py  test_partition_policy.py
tests/data/: iq1m_oracle.json
